changed title html

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- link to CSS -->
     <link rel="stylesheet" href="./css/style.css">
 
-    <title>js-campominato-grid</title>
+    <title>js-campominato-dom</title>
 </head>
 <body>
     <header class="d-flex custom-align-center">
