--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </header>
     <main class="d-flex custom-align-center">
-        <div class="container" id="gameAreaContainer">
+        <div class="container" id="gameContainer">
             <div class="row">
                 <div class="col d-flex justify-content-center">
                     <div class="d-flex flex-wrap" id="gameArea">
