--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <main class="d-flex custom-align-center">
         <div class="container" id="gameContainer">
             <div class="row">
-                <div class="col d-flex justify-content-center">
+                <div class="col d-flex justify-content-center custom-align-center">
                     <div class="d-flex flex-wrap" id="gameArea">
                     
                     </div>
