started working on adding points and time. Added div.col-4 in html

--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
     <header class="d-flex custom-align-center">
         <div class="container">
             <div class="row d-flex custom-align-center">
-                <div class="col-6">
+                <div class="col-4">
                     <img id="booleanLogo" src="./img/boolean-logo.png" alt="boolean logo">
                 </div>
-                <div class="col-6 text-end">
+                <div class="col-4 text-end">
+
+                </div>
+                <div class="col-4 text-end">
                     <div id="playButton" class="btn btn-primary">Play</div>
                 </div>
             </div>
