added history of best times

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="container">
             <div class="row">
                 <div id="firstPosition" class="col-4 custom-h-50px bestScores d-flex justify-content-center custom-align-center">
-                    Best Score : 0
+                    Best Time : 0
                 </div>
 
                 <div id="secondPosition" class="col-4 custom-h-50px bestScores d-flex justify-content-center custom-align-center">
